<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCrearProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCrearProducto"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreProducto"
        android:layout_width="304dp"
        android:layout_height="69dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvCrearProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreProducto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hintNombre"
            android:inputType="text"
            android:textAlignment="viewStart"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrecioProducto"
        android:layout_width="304dp"
        android:layout_height="69dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tilNombreProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrecioProducto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hintPrecio"
            android:inputType="text"
            android:textAlignment="viewStart"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcionProducto"
        android:layout_width="304dp"
        android:layout_height="69dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tilPrecioProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcionProducto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hintDescripcion"
            android:inputType="text"
            android:textAlignment="viewStart"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGuardarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btnGuardar"
        app:layout_constraintTop_toBottomOf="@id/tilDescripcionProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnVerProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btnVer"
        app:layout_constraintTop_toBottomOf="@id/btnGuardarProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>